[gd_scene load_steps=9 format=3 uid="uid://bft2yjrwvpvds"]

[ext_resource type="Script" path="res://scripts/market.gd" id="1_6dngd"]
[ext_resource type="Texture2D" uid="uid://dvb38r1ro8n1y" path="res://art/spritesforgamefr/market.png" id="2_1igwf"]
[ext_resource type="PackedScene" uid="uid://c87ssnpe7lp52" path="res://scenes/shop_menu.tscn" id="3_il5mv"]
[ext_resource type="FontFile" uid="uid://cqjpfxt4wvcfl" path="res://art/spritesforgamefr/Poco.ttf" id="4_blb1g"]
[ext_resource type="Texture2D" uid="uid://dk7d2j8bc4yuu" path="res://art/spritesforgamefr/coins.png" id="5_qytyc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhp3a"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3pnc"]
size = Vector2(12, 7)

[sub_resource type="LabelSettings" id="LabelSettings_wpck1"]
font = ExtResource("4_blb1g")
font_size = 30

[node name="market" type="StaticBody2D"]
z_index = -1
scale = Vector2(1.4, 1.4)
script = ExtResource("1_6dngd")

[node name="Area2D" type="Area2D" parent="." groups=["market"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_lhp3a")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1igwf")

[node name="buy_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="buy_area"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_m3pnc")

[node name="shop_menu" parent="." instance=ExtResource("3_il5mv")]
position = Vector2(-12.8571, -22.1429)
scale = Vector2(0.6, 0.6)

[node name="sold_crops" type="Label" parent="."]
offset_left = -16.0
offset_top = -24.0
offset_right = 52.0
offset_bottom = 15.0
scale = Vector2(0.4, 0.4)
text = "+1"
label_settings = SubResource("LabelSettings_wpck1")
horizontal_alignment = 1

[node name="plus_coins" type="Sprite2D" parent="sold_crops"]
position = Vector2(57.1429, 26.7857)
texture = ExtResource("5_qytyc")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="buy_area" to="." method="_on_buy_area_area_entered"]
[connection signal="area_exited" from="buy_area" to="." method="_on_buy_area_area_exited"]
